[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/toro_mecanico.gd" type="Script" id=1]
[ext_resource path="res://characters/prueba_angel.gltf" type="PackedScene" id=2]
[ext_resource path="res://assets/velorio/rojo_2.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.418308, 1, 0.811233 )

[node name="toro_mecanico" type="Spatial"]
script = ExtResource( 1 )

[node name="prueba_angel" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.08294e-08, 0, 0.247748, 0, 0.247748, 0, -0.247748, 0, -1.08294e-08, 0, 0, 0.210073 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.66201, 0, 0, 0, 0.630688, 0, 0.666321, -0.729484 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 0.6, 0, 0, 0, 1, 0, -0.375966, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.30495, 0, 0, 0, 1, 0, 0, 0, 0.763111, 0, 1, -1.06115 )
shape = SubResource( 3 )

[node name="Camera_interact" type="Camera" parent="."]
transform = Transform( -0.982765, 0.0420857, -0.180004, -0.00902713, 0.961652, 0.274124, 0.184638, 0.271024, -0.944698, -0.67988, 2.30137, -3.80316 )
fov = 47.5

[node name="Camera_hablar" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.46634, -2.02556 )
fov = 16.4
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
